--- a/config/agent.yml
+++ b/config/agent.yml
@@ -5,13 +5,13 @@ server:
     $env: PORT
   apiKey:
     $env: API_KEY
-  schemaPath: /open-api.json
+  schemaPath: /api
   apiBasePath:
     $env: AGENT_ENDPOINT
   apiDocsPath: /api-docs
   defaultDID:
     create: true
-    messagingServiceEndpoint: /messaging
+    messagingServiceEndpoint: /
 constants:
   secretKey:
     $env: SECRET_KEY
@@ -82,70 +82,6 @@ agent:
   $require: "@veramo/core#Agent"
   $args:
     - plugins:
-        - $require: "@veramo/key-manager#KeyManager"
-          $args:
-            - store:
-                $require: "@veramo/data-store#KeyStore"
-                $args:
-                  - $ref: /dbConnection
-                  - $require: "@veramo/kms-local#SecretBox"
-                    $args:
-                      - $ref: /constants/secretKey
-              kms:
-                local:
-                  $require: "@veramo/kms-local#KeyManagementSystem"
-        - $require: "@veramo/did-manager#DIDManager"
-          $args:
-            - store:
-                $require: "@veramo/data-store#DIDStore"
-                $args:
-                  - $ref: /dbConnection
-              defaultProvider: did:ethr:rinkeby
-              providers:
-                did:ethr:
-                  $require: "@veramo/did-provider-ethr#EthrDIDProvider"
-                  $args:
-                    - defaultKms: local
-                      network: mainnet
-                      rpcUrl: https://mainnet.infura.io/v3/5ffc47f65c4042ce847ef66a3fa70d4c
-                      gas: 10001
-                      ttl: 31104001
-                did:ethr:rinkeby:
-                  $require: "@veramo/did-provider-ethr#EthrDIDProvider"
-                  $args:
-                    - defaultKms: local
-                      network: rinkeby
-                      rpcUrl: https://rinkeby.infura.io/v3/5ffc47f65c4042ce847ef66a3fa70d4c
-                      gas: 10001
-                      ttl: 31104001
-                did:ethr:ropsten:
-                  $require: "@veramo/did-provider-ethr#EthrDIDProvider"
-                  $args:
-                    - defaultKms: local
-                      network: ropsten
-                      rpcUrl: https://ropsten.infura.io/v3/5ffc47f65c4042ce847ef66a3fa70d4c
-                      gas: 10001
-                      ttl: 31104001
-                did:ethr:kovan:
-                  $require: "@veramo/did-provider-ethr#EthrDIDProvider"
-                  $args:
-                    - defaultKms: local
-                      network: kovan
-                      rpcUrl: https://kovan.infura.io/v3/5ffc47f65c4042ce847ef66a3fa70d4c
-                      gas: 10001
-                      ttl: 31104001
-                did:ethr:goerli:
-                  $require: "@veramo/did-provider-ethr#EthrDIDProvider"
-                  $args:
-                    - defaultKms: local
-                      network: goerli
-                      rpcUrl: https://goerli.infura.io/v3/5ffc47f65c4042ce847ef66a3fa70d4c
-                      gas: 10001
-                      ttl: 31104001
-                did:web:
-                  $require: "@veramo/did-provider-web#WebDIDProvider"
-                  $args:
-                    - defaultKms: local
         - $require: '@veramo/did-resolver#DIDResolverPlugin'
           $args:
             - resolver:
@@ -160,3 +96,21 @@ agent:
         - $require: "@veramo/did-comm#DIDComm"
         - $require: "@veramo/credential-w3c#CredentialIssuer"
         - $require: "@veramo/selective-disclosure#SelectiveDisclosure"
+        - $require: '@veramo/remote-client#AgentRestClient'
+          $args:
+            - url: 
+                $env: MAIN_AGENT_URL
+              headers:
+                Authorization: 
+                  $env: MAIN_AGENT_AUTHORIZATION  # 'Bearer API_KEY'
+              enabledMethods:
+                - keyManagerGetKeyManagementSystems
+                - keyManagerGet
+                - keyManagerEncryptJWE
+                - keyManagerDecryptJWE
+                - keyManagerSignJWT
+                - keyManagerSignEthTX
+                - didManagerGetProviders
+                - didManagerFind
+                - didManagerGet
+                - resolveDid
